# Ultra-Low-Latency-Order-Book-Simulator

./: Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/auth/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/scheduler/src/: lib.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs
crates/squencer/: Cargo.toml
crates/squencer/src/: lib.rs
crates/surveillance/: Cargo.toml
crates/surveillance/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
src/: book.rs  book_tests.rs  connection.rs  engine.rs  lib.rs  main.rs  order_ring_buffer.rs  protocol.rs  protocol_tests.rs  spin_yield_queue.rs
tests/: book_tests.rs
