[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/gateway",
    "crates/matching-engine",
    "crates/telemetry",
    "crates/risk",
    "crates/market-data",
    "crates/persistence",
    "crates/surveillance",
    "bin/market-maker",
    "bin/exchange", "crates/validator", "crates/squencer", "crates/scheduler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytemuck = "1.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
rayon = "1.8"
rand = "0.8"
thiserror = "1.0"
